fixed font and spacing on menu bar

--- a/css/style.css
+++ b/css/style.css
@@ -16,11 +16,16 @@
     text-align: center;
     font-family: Arial, Helvetica, sans-serif;
     display: block;
+    padding: 10px 30px;
     background-color: #b9b9b9; 
     text-align: center;
     text-decoration-color: white;
-    
-    font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
+    display: flex;
+    justify-content: space-around;
+    font-family: Arial, Helvetica, sans-serif;
+}
+a:visited { 
+  color: rgb(255, 255, 255);
 }
 /* links change color when hovering */
 .topnav a:hover {
